--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -23,8 +23,10 @@
   },
   "permissions": [
     "proxy",
-    "storage",
     "webRequest",
+    "webRequestBlocking",
+    "<all_urls>",
+    "storage",
     "notifications"
   ],
   "host_permissions": [
