--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -14,7 +14,7 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     },
-    "default_title": "Socks5 Proxy Manager"
+    "default_title": "Socks5 代理管理器"
   },
   "options_ui": {
     "page": "options.html",
