优化代码，添加说明文档

--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -23,8 +23,7 @@
   "permissions": [
     "proxy",
     "storage",
-    "notifications",
-    "scripting"
+    "notifications"
   ],
   "host_permissions": [
     "<all_urls>"
